# js_sidecar

./: Cargo.toml  LICENSE_APACHE  README.md
benches/: bench.rs
src/: connection.rs  error.rs  lib.rs  messages.rs  protocol.rs  worker.mjs
src/worker/: package.json  pnpm-lock.yaml  vite.config.js
src/worker/src/: api_types.ts  debug.ts  index.ts  protocol.test.ts  protocol.ts  run_script.test.ts  run_script.ts  types.ts  worker.ts
