[package]
name = "js_sidecar"
version = "0.1.0"
edition = "2021"
description = "Run a pool of JavaScript engines"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dimfeld/js_sidecar"
homepage = "https://github.com/dimfeld/js_sidecar"
documentation = "https://docs.rs/js_sidecar"

[dependencies]
byteorder = "1.5.0"
deadpool = "0.12.1"
futures = "0.3.30"
nix = { version = "0.29.0", features = ["signal"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tempfile = "3.10.1"
thiserror = "1.0.63"
tokio = { version = "1.36.0", features = ["io-util", "fs", "net", "process", "rt", "sync"] }
tracing = "0.1.40"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "tokio"] }
tokio = { version = "1.36.0", features = ["io-util", "macros", "net", "process", "rt", "rt-multi-thread", "sync", "test-util"] }

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
